--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -20,5 +20,5 @@ jobs:
     - Upload artifact:
       uses: actions/upload-artifact@v3
       with:
-        name: timheuer-containerize
-        path: **/*.vsix
+        name: "timheuer-containerize"
+        path: "**/*.vsix"
