--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -13,11 +13,16 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 18
-    - run: npm install
-    - run: npm run package
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Compile and Package
+      run: npm run package
       env:
         CI: true
-    - Upload artifact:
+
+    - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
         name: "timheuer-containerize"
