--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "timheuer-containerize",
-  "displayName": "Containerize",
+  "name": "dotnet-containerizer",
+  "displayName": "Containerizer",
   "description": "Takes a single .NET project and creates an OCS-compliant container image and pushes to a registry.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Tim Heuer",
   "license": "MIT",
   "projectUrl": "https://github.com/timheuer/containerize",
-  "tags": [ "dotnet", "docker", "container", "containerize" ],
+  "icon": "resources/container.png",
+  "tags": [
+    "dotnet",
+    "docker",
+    "container",
+    "containerize"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/timheuer/containerize"
@@ -18,16 +24,36 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:timheuer-containerize.helloWorld"
+    "onCommand:dotnet-containerizer.containerize",
+    "onCommand:dotnet-containerizer.addPublishContainerTask"
   ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "timheuer-containerize.helloWorld",
-        "title": "Hello World"
+        "command": "dotnet-containerizer.containerize",
+        "title": ".NET Containerizer: Containerize"
+      },
+      {
+        "command": "dotnet-containerizer.addPublishContainerTask",
+        "title": ".NET Containerizer: Add Publish Container Task"
       }
-    ]
+    ],
+    "configuration": {
+      "title": ".NET Containerizer",
+      "properties": {
+        "dotnetContainerizer.baseImageName": {
+          "type": "string",
+          "default": "mcr.microsoft.com/dotnet/aspnetcore:7.0",
+          "description": "The base container image"
+        },
+        "dotnetContainerizer.imageTag": {
+          "type": "string",
+          "default": "latest",
+          "description": "The registry tag to push to"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
@@ -37,21 +63,22 @@
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
     "package": "npm run clean && vsce package",
-    "clean": "rimraf ./dist ./out"
+    "clean": "rimraf ./dist ./out",
+    "deploy": "vsce publish --yarn"
   },
   "devDependencies": {
-    "@types/vscode": "^1.72.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.72.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "@vscode/test-electron": "^2.1.5",
     "eslint": "^8.20.0",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
+    "rimraf": "^3.0.2",
     "typescript": "^4.7.4",
-    "@vscode/test-electron": "^2.1.5",
-    "vsce": "^2.13.0",
-    "rimraf": "^3.0.2"
+    "vsce": "^2.13.0"
   }
 }
