--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "test": "node ./out/test/runTest.js",
     "package": "npm run clean && vsce package",
     "clean": "rimraf ./dist ./out",
-    "deploy": "vsce publish --yarn"
+    "deploy": "vsce publish"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
