Adding publisher name [skip ci]

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Takes a single .NET project and creates an OCS-compliant container image and pushes to a registry.",
   "version": "0.0.2",
   "author": "Tim Heuer",
+  "publisher": "TimHeuer",
   "license": "MIT",
   "projectUrl": "https://github.com/timheuer/containerize",
   "icon": "resources/container.png",
