--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,7 +18,7 @@ jobs:
         node-version: 18
 
     - name: Version bump
-      run: npm version ${{ github.event.inputs.version }} --no-git-tag-version
+      run: npm version ${{ github.event.inputs.version }}
 
     - name: Install dependencies
       run: npm install
