--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dotnet-containerizer",
-  "displayName": "Containerizer",
+  "displayName": ".NET Containerizer",
   "description": "Takes a single .NET project and creates an OCS-compliant container image and pushes to a registry.",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": "Tim Heuer",
   "publisher": "TimHeuer",
   "license": "MIT",
