Adding appropriate activation events

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "Other"
   ],
   "activationEvents": [
+    "onLanguage:csharp",
+    "workspaceContains:filePattern:**/*.csproj",
     "onCommand:dotnet-containerizer.containerize",
     "onCommand:dotnet-containerizer.addPublishContainerTask"
   ],
