--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dotnet-containerizer",
   "displayName": ".NET Containerizer",
   "description": "Takes a single .NET project and creates an OCS-compliant container image and pushes to a registry.",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "author": "Tim Heuer",
   "publisher": "TimHeuer",
   "license": "MIT",
@@ -25,9 +25,12 @@
     "Other"
   ],
   "activationEvents": [
-    "*"
+    "onCommand:dotnet-containerizer.containerize",
+    "onCommand:dotnet-containerizer.containerizeAndPush",
+    "onLanguage:csharp",
+    "workspaceContains:filePattern:**/*.csproj"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -57,12 +60,14 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
+    "compile_old": "tsc -p ./",
+    "compile": "webpack --mode production --devtool hidden-source-map",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
     "package": "npm run clean && vsce package",
+    "package_noclean": "webpack --mode production --devtool hidden-source-map",
     "clean": "rimraf ./dist ./out",
     "deploy": "vsce publish"
   },
@@ -78,7 +83,10 @@
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
     "rimraf": "^3.0.2",
+    "ts-loader": "^9.4.1",
     "typescript": "^4.7.4",
-    "vsce": "^2.13.0"
+    "vsce": "^2.13.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
