--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dotnet-containerizer",
   "displayName": ".NET Containerizer",
   "description": "Takes a single .NET project and creates an OCS-compliant container image and pushes to a registry.",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "author": "Tim Heuer",
   "publisher": "TimHeuer",
   "license": "MIT",
@@ -56,6 +56,15 @@
           "description": "The registry tag to push to"
         }
       }
+    },
+    "menus": {
+      "explorer/context": [
+        {
+          "command": "dotnet-containerizer.containerize",
+          "when": "resourceScheme == file && resourceExtname == .csproj",
+          "group": "navigation"
+        }
+      ]
     }
   },
   "scripts": {
