Changing command labels

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dotnet-containerizer",
   "displayName": ".NET Containerizer",
   "description": "Takes a single .NET project and creates an OCS-compliant container image and pushes to a registry.",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "author": "Tim Heuer",
   "publisher": "TimHeuer",
   "license": "MIT",
@@ -36,11 +36,11 @@
     "commands": [
       {
         "command": "dotnet-containerizer.containerize",
-        "title": ".NET Containerizer: Containerize"
+        "title": ".NET: Containerize"
       },
       {
         "command": "dotnet-containerizer.addPublishContainerTask",
-        "title": ".NET Containerizer: Add Publish Container Task"
+        "title": ".NET: Add PublishContainer Task"
       }
     ],
     "configuration": {
@@ -48,7 +48,7 @@
       "properties": {
         "dotnetContainerizer.baseImageName": {
           "type": "string",
-          "default": "mcr.microsoft.com/dotnet/aspnetcore:7.0",
+          "default": "mcr.microsoft.com/dotnet/aspnetcore:8.0",
           "description": "The base container image"
         },
         "dotnetContainerizer.imageTag": {
